[package]
name = "d64"
version = "0.1.0"
authors = ["Jeroen Bakker<j.bakker@atmind.nl>"]
edition = "2021"

description = "Crate to create and modify and inspect D64 and related files."
readme = "README.md"
repository = "https://github.com/jeroenbakker-atmind/d64-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name="dump_disk"

[[example]]
name="rename_disk"

[[example]]
name="format_disk"

[[example]]
name="list_disk"

[[example]]
name="read_file"

[[example]]
name="create_file"

[badges]
maintenance = { status = "actively-developed" }
