[package]
name = "commodore1541"
version = "0.1.0"
authors = ["Jeroen Bakker<j.bakker@atmind.nl>"]
edition = "2021"

[dependencies]
d64 = { path="../d64" }
petscii = { path="../petscii" }

[[example]]
name="dump_disk"

[[example]]
name="rename_disk"

[[example]]
name="format_disk"

[[example]]
name="list_disk"

[[example]]
name="read_file"

[[example]]
name="create_file"


[badges]
maintenance = { status = "actively-developed" }

